actualizamos el index

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div class="container">
       <h1>🎯 Adivina el Número</h1>
+      <p>Mi primer proyecto en Github</p>
       <p>
         Estoy pensando en un número entre 1 y 100. ¿Puedes adivinar cuál es?
       </p>
